--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,7 +13,10 @@ spring:
 #spring集成mybatis环境
 #pojo别名扫描包
 mybatis:
-  type-aliases-package: com.xw.taes.warden.domain
+  type-aliases-package: com.xw.taes.*.domain
   #加载Mybatis映射文件
   mapper-locations: classpath:mapper/*/*Mapper.xml
+logging:
   config: classpath:log4j2-spring.xml
+  level:
+    com.xw.taes.*.dao: debug
