--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,22 @@
         <poi.version>4.1.1</poi.version>
         <swagger.version>2.9.2</swagger.version>
         <shiro-spring.vaersion>1.5.3</shiro-spring.vaersion>
+        <jedis.version>2.9.0</jedis.version>
     </properties>
 
     <dependencies>
+        <!-- redis的启动依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <!-- springBoot默认使用logback日志框架，要整合log4j2首先移除logback避免jar包冲突 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -41,6 +54,35 @@
             <artifactId>shiro-spring</artifactId>
             <version>${shiro-spring.vaersion}</version>
         </dependency>
+        <!-- shiro缓存 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${shiro-spring.vaersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
+        </dependency>
+        <!-- shiro+redis缓存插件 -->
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+            <version>2.4.2.1-RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.shiro</groupId>
+                    <artifactId>shiro-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>redis.clients</groupId>
+                    <artifactId>jedis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
 
         <!-- 引入log4j2依赖 -->
         <dependency>
