--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <swagger.version>2.9.2</swagger.version>
         <shiro-spring.vaersion>1.5.3</shiro-spring.vaersion>
         <jedis.version>2.9.0</jedis.version>
+        <activemq.pool.version>5.15.0</activemq.pool.version>
     </properties>
 
     <dependencies>
@@ -159,6 +160,18 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
             <scope>true</scope>
+        </dependency>
+
+        <!--activemq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+            <version>${activemq.pool.version}</version>
         </dependency>
     </dependencies>
 
