--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/taes?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: 123456
+    password: freecg
     #配置启动文件
   profiles:
       active: dev
